; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_ass_mp.c_message_callback.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_ass_mp.c_message_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }

@map_ass_level = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32, i8*)* @message_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @message_callback(i32 %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.mp_log*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to %struct.mp_log*
  store %struct.mp_log* %11, %struct.mp_log** %9, align 8
  %12 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %13 = icmp ne %struct.mp_log* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %4
  br label %29

15:                                               ; preds = %4
  %16 = load i32*, i32** @map_ass_level, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %5, align 4
  %21 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @mp_msg_va(%struct.mp_log* %21, i32 %22, i8* %23, i32 %24)
  %26 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @mp_msg(%struct.mp_log* %26, i32 %27, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @mp_msg_va(%struct.mp_log*, i32, i8*, i32) #1

declare dso_local i32 @mp_msg(%struct.mp_log*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
